@@ -9,7 +9,6 @@ import com.purbon.kafka.topology.validation.TopicValidation;
 import com.purbon.kafka.topology.validation.TopologyValidation;
 import com.purbon.kafka.topology.validation.Validation;
 import java.io.IOException;
-import java.lang.reflect.Constructor;
 import java.util.List;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -20,6 +19,8 @@ import org.apache.logging.log4j.Logger;
 public class TopologyValidator {
 
   private static final Logger LOGGER = LogManager.getLogger(TopologyValidator.class);
+
+  private static final String CLASS_PARAM_DELIMITER = "#";
 
   private final Configuration config;
   private final String classPrefix;
@@ -100,8 +101,12 @@ public class TopologyValidator {
                           validationClass));
                 }
 
-                Constructor<?> constructor = clazz.getConstructor();
-                Object instance = constructor.newInstance();
+                String constructorParam = getValidationStringParam(validationClass);
+                Object instance =
+                    constructorParam == null
+                        ? clazz.getConstructor().newInstance()
+                        : clazz.getConstructor(String.class).newInstance(constructorParam);
+
                 if (instance instanceof TopologyValidation) {
                   return (TopologyValidation) instance;
                 } else if (instance instanceof TopicValidation) {
@@ -119,9 +124,18 @@ public class TopologyValidator {
 
   private Class<?> getValidationClazz(String validationClass) {
     try {
-      return Class.forName(validationClass);
+      return Class.forName(getValidationClassName(validationClass));
     } catch (ClassNotFoundException e) {
       return null;
     }
+  }
+
+  private String getValidationClassName(String validationClass) {
+    return validationClass.split(CLASS_PARAM_DELIMITER)[0];
+  }
+
+  private String getValidationStringParam(String validationClass) {
+    String[] strings = validationClass.split(CLASS_PARAM_DELIMITER);
+    return strings.length > 1 ? strings[1] : null;
   }
 }
